--- a/carrot-test-config/report.ipynb
+++ b/carrot-test-config/report.ipynb
@@ -1,30 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python385jvsc74a57bd0aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49",
-   "display_name": "Python 3.8.5 64-bit"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -32,9 +6,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Control block\n",
-    "carrot_download_results = True\n",
-    "carrot_download_inputs = False"
+    "import csv\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Get results from the results file\n",
+    "results = {}\n",
+    "with open(\"results.csv\", newline='') as results_csv:\n",
+    "    csv_reader = csv.reader(results_csv)\n",
+    "    # Get the header\n",
+    "    header = next(csv_reader)\n",
+    "    # Now get the results\n",
+    "    row = next(csv_reader)\n",
+    "    for i in range(0, len(row)):\n",
+    "        results[header[i]] = row[i]\n",
+    "# Download files in results\n",
+    "result_files = {}\n",
+    "for key, val in results.items():\n",
+    "    if val.startswith('gs://'):\n",
+    "        # Attempt to download with gsutil\n",
+    "        os.makedirs(f'carrot_downloads/{key}', exist_ok=True)\n",
+    "        filepath = f'carrot_downloads/{key.replace(\" \", \"_\")}/{val[val.rfind(\"/\")+1:]}'\n",
+    "        download_status = os.system(f'gsutil cp {val} {filepath}')\n",
+    "        # If it failed, print an error message and exit\n",
+    "        if download_status != 0:\n",
+    "            sys.exit(f\"gsutil terminated with an non-zero exit code when attempting to download {val}\")\n",
+    "        # If it succeeded, add it to our file list\n",
+    "        result_files[key] = filepath"
    ]
   },
   {
@@ -47,7 +45,7 @@
     "\n",
     "# Load data and comparison files\n",
     "data = [[], []]\n",
-    "with open(carrot_downloads[\"results\"][\"example data file\"]) as data_file:\n",
+    "with open(result_files[\"example data file\"]) as data_file:\n",
     "    data_csv = csv.reader(data_file)\n",
     "    for row in data_csv:\n",
     "        if len(row) > 1:\n",
@@ -55,7 +53,7 @@
     "            data[1].append(float(row[1]))\n",
     "\n",
     "comparison = [[], []]\n",
-    "with open(carrot_downloads[\"results\"][\"example comparison file\"]) as comparison_file:\n",
+    "with open(result_files[\"example comparison file\"]) as comparison_file:\n",
     "    comparison_csv = csv.reader(comparison_file)\n",
     "    for row in comparison_csv:\n",
     "        if len(row) > 1:\n",
@@ -98,5 +96,35 @@
     "plt.show()"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "1ee38ef4a5a9feb55287fd749643f13d043cb0a7addaab2a9c224cbe137c0062"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.12 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
