Switched the carrot commands file to markdown and added clarification to all the steps

--- a/carrot-test-config/report.ipynb
+++ b/carrot-test-config/report.ipynb
@@ -27,7 +27,7 @@
     "        # Attempt to download with gsutil\n",
     "        os.makedirs(f'carrot_downloads/{key}', exist_ok=True)\n",
     "        filepath = f'carrot_downloads/{key.replace(\" \", \"_\")}/{val[val.rfind(\"/\")+1:]}'\n",
-    "        download_status = os.system(f'gsutil cp {val} {filepath}')\n",
+    "        download_status = os.system(f'gsutil cp {val} {filepath} >/dev/null 2>&1')\n",
     "        # If it failed, print an error message and exit\n",
     "        if download_status != 0:\n",
     "            sys.exit(f\"gsutil terminated with an non-zero exit code when attempting to download {val}\")\n",
